# pingcrm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  routes.json  rustfmt.toml
.github/workflows/: build.yaml
app/: Cargo.toml
app/src/: application.rs  blueprint.rs  config.rs  lib.rs  models.rs  storage.rs  telemetry.rs
app/src/frontend/: inertia.rs  mod.rs  vite.rs
app/src/http/middleware/: auth.rs  mod.rs
app/src/http/routes/: auth.rs  mod.rs  system.rs
app/src/routes/: auth.rs  mod.rs  system.rs
config/: base.yml  dev.yml  prod.yml  test.yml
framework/: Cargo.toml
framework/src/: application.rs  lib.rs  telemetry.rs
framework/src/http/: mod.rs
framework/src/router/: builder.rs  group.rs  mod.rs  resource.rs  route.rs
frontend/: pnpm-lock.yaml  vite.config.ts
frontend/src/Pages/Auth/: Login.tsx
pavex-cookies/: Cargo.toml
pavex-cookies/src/: lib.rs
pavex-session/: Cargo.toml
pavex-session/src/: config.rs  lib.rs  manager.rs  middleware.rs  session.rs  store.rs
pavex-session/src/handlers/: file.rs  mod.rs
pavex-session/src/middleware/: csrf.rs  mod.rs  session.rs
sdk/: Cargo.toml
server/: Cargo.toml
server/src/: config.rs  lib.rs  migrations.rs  telemetry.rs
server/tests/integration/: helpers.rs
