[workspace]
resolver = "2"
default-members = ["server"]
members = ["app", "server", "sdk", "pavex-session", "pavex-cookies"]

[workspace.package]
edition = "2021"
license = "MIT"
publish = false
repository = ""
description = ""
version = "0.0.0"
readme = "README.md"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
