[package]
name = "framework"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
authors = { workspace = true }

[dependencies]
tracing = "0.1.40"
pavex = { git = "https://github.com/LukeMathWalker/pavex", branch = "main" }
pavex_cli_client = { git = "https://github.com/LukeMathWalker/pavex", branch = "main", optional = true }
anyhow = "1.0.77"
serde_json = "1.0.108"
pluralizer = "0.4.0"

[features]
build = ["dep:pavex_cli_client"]
