[package]
name = "pavex-cookies"
readme = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[dependencies]
cookie = { version = "0.18.0", features = ["percent-encode"] }
pavex = { git = "https://github.com/LukeMathWalker/pavex", branch = "main" }
