[package]
name = "pavex-session"
readme = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = { workspace = true }



[dependencies]
rand = "0.8.5"
serde = "1.0.193"
flysystem = "0.1.3"
thiserror = "1.0.51"
serde_json = "1.0.108"
pavex-cookies = { path = "../pavex-cookies" }
pavex = { git = "https://github.com/LukeMathWalker/pavex", branch = "main" }
humantime-serde = "1.1.1"
