[package]
name = "pavex-session"
readme = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[dependencies]
rand = "0.8.5"
serde = "1.0.193"
futures = "0.3.30"
thiserror = "1.0.51"
serde_json = "1.0.108"
humantime-serde = "1.1.1"
cookie = { version = "0.18.0", features = ["percent-encode"] }
pavex = { git = "https://github.com/LukeMathWalker/pavex", branch = "main" }
