[package]
name = "sdk"
readme = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[lib]
name = "sdk"
path = "src/lib.rs"

[dependencies]
http = { version = "1.0.0", package = "http" }
bytes = { version = "1.5.0", package = "bytes" }
hyper = { version = "1.1.0", package = "hyper" }
flysystem = { version = "0.1.3", package = "flysystem" }
thiserror = { version = "1.0.51", package = "thiserror" }
app = { version = "0.0.0", path = "../app", package = "app" }
http_body_util = { version = "0.1.0", package = "http-body-util" }
pavex_session = { version = "0.0.0", path = "../pavex-session", package = "pavex-session" }
pavex = { version = "0.1.0", git = "https://github.com/LukeMathWalker/pavex", branch = "main", package = "pavex" }
matchit = { version = "0.7.3", git = "https://github.com/ibraheemdev/matchit", branch = "master", package = "matchit" }

[package.metadata.px.generate]
generator_name = "sdk-builder"
generator_type = "cargo_workspace_binary"

[lints]
clippy = { all = "allow" }
rust = { unused_variables = "allow", dead_code = "allow" }
